[project]
name = "git-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "instructor>=1.9.0",
    "ipykernel>=6.29.5",
    "openai>=1.90.0",
    "openai-agents>=0.0.19",
    "pydantic>=2.11.7",
]
